--- a/styles/sass/partials/elements/_nav.scss
+++ b/styles/sass/partials/elements/_nav.scss
@@ -27,23 +27,22 @@ nav {
 
         width: 100%;
         height: 64px;
-        padding: calc(0.5*$spacing);
-        padding-left: calc(0.75 * $spacing);
-        background-color: $colorWhite;
-        border-bottom: 2px solid $colorOne;
+        padding: 0 calc(0.75 * $spacing);
+        background-color: rgba($colorWhite, $opacityHigh);
+        border-bottom: 1px solid $colorOne;
 
         h4 {
             pointer-events: auto;
+            margin: 0;
             color: transparent;
             text-shadow: 0 0 0 $colorBlack;
         }
 
         // Hamburger Button Span Styling
         .hamburgerButton {
-            margin: 0;
             padding: 0;
-            width: calc(2 * $fontSizeBase);
-            height: calc(2 * $fontSizeBase);
+            width: 36px;
+            height: 40px;
             
             display: flex;
             justify-content: center;
@@ -61,7 +60,7 @@ nav {
                 display: block;
                 position: absolute;
                 height: 4px;
-                width: 80%;
+                width: 100%;
                 background: $colorBlack;
                 border-radius: 9px;
                 opacity: 1;
@@ -84,7 +83,7 @@ nav {
             &:hover {
                 span:nth-child(1) {
                     transform: rotate(45deg);
-                    width: 50%;
+                    width: 60%;
                     top: 18px;
                     left: 0px;
                 }
@@ -96,9 +95,9 @@ nav {
     
                 span:nth-child(3) {
                     transform: rotate(-45deg);
-                    width: 50%;
+                    width: 60%;
                     top: 18px;
-                    left: 12px;
+                    left: 13px;
                 }
             }
         }
@@ -109,7 +108,7 @@ nav {
         position: absolute;
         bottom: 100%;
         width: 100%;
-        height: calc(100% - 50px);
+        height: 100%;
 
         // Keeps <ol> interactable to clicks
         pointer-events: auto;
